<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DonateBloodActivity"
    android:layout_height="match_parent"
    android:layout_width="wrap_content"
    android:background="#651919">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="650dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/datas"
        android:id="@+id/textView_enterDetails"
        android:textColor="#ffffffff"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/button_viewLocation"
        android:layout_toEndOf="@+id/button_viewLocation" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffffff"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Name"
        android:id="@+id/textView_name"
        android:layout_below="@+id/textView_enterDetails"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffffff"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Address"
        android:id="@+id/textView_address"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/textView_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffffff"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/ContactNo"
        android:id="@+id/textView_contactNo"
        android:layout_below="@+id/textView_address"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffffff"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/BloodGroup"
        android:id="@+id/textView_blood_group"
        android:layout_below="@+id/textView_contactNo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffffff"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/textViewState"
        android:id="@+id/textView_state"
        android:layout_below="@+id/textView_blood_group"
        android:layout_alignRight="@+id/textView_name"
        android:layout_alignEnd="@+id/textView_name"
        android:layout_marginTop="32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffffff"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/MedicalHistory"
        android:id="@+id/textView_medicalHistory"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/textView_currentLocation"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffffff"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/currentLocation"
        android:id="@+id/textView_currentLocation"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/textView_state" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffffff"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Name"
        android:id="@+id/textView_nameListed"
        android:layout_above="@+id/textView_address"
        android:layout_toRightOf="@+id/textView_enterDetails"
        android:layout_toEndOf="@+id/textView_enterDetails" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffffff"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/contact"
        android:id="@+id/textView_contactListed"
        android:layout_alignTop="@+id/textView_contactNo"
        android:layout_alignLeft="@+id/textView_bloodListed"
        android:layout_alignStart="@+id/textView_bloodListed" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffffff"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/state"
        android:id="@+id/textView_stateListed"
        android:layout_above="@+id/textView_currentLocation"
        android:layout_alignLeft="@+id/textView_addressListed"
        android:layout_alignStart="@+id/textView_addressListed" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffffff"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/clocation"
        android:id="@+id/textView_locationView"
        android:layout_alignTop="@+id/textView_currentLocation"
        android:layout_toRightOf="@+id/textView_enterDetails"
        android:layout_toEndOf="@+id/textView_enterDetails" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffffff"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Address"
        android:id="@+id/textView_addressListed"
        android:layout_above="@+id/textView_contactNo"
        android:layout_alignLeft="@+id/textView_contactListed"
        android:layout_alignStart="@+id/textView_contactListed" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffffff"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/history"
        android:id="@+id/textView_medicalListed"
        android:layout_above="@+id/button_viewLocation"
        android:layout_toRightOf="@+id/textView_enterDetails"
        android:layout_toEndOf="@+id/textView_enterDetails" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffffff"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/blood"
        android:id="@+id/textView_bloodListed"
        android:layout_above="@+id/textView_state"
        android:layout_toRightOf="@+id/textView_enterDetails"
        android:layout_toEndOf="@+id/textView_enterDetails" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_location"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/button_viewLocation"
        android:onClick="goToMapActivity"
        android:layout_marginTop="84dp"
        android:layout_below="@+id/textView_medicalHistory"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deleteEntry"
        android:id="@+id/button_deleteEntry"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:onClick="deleteUser"
        android:layout_alignTop="@+id/button_viewLocation"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
</ScrollView>