<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context="com.sdsu.cs646.lakshmi.bloodbank.chart.SelectChartActivity"
android:background="#651919">



    <Button
        android:id="@+id/button_selectChart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:text="@string/bloodDistribution"
    android:id="@+id/textView_enterDetails"
    android:textColor="#ffffffff"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="#ffffffff"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:text="@string/textViewState"
    android:id="@+id/textView_state"
    android:layout_marginTop="69dp"
    android:layout_below="@+id/textView_enterDetails"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true" />

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="6dp"
    android:textColor="#ffffffff"
    android:text="@string/hint"
    android:id="@+id/textView_hint"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true" />

<Spinner
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/spinner_state_select"
    android:layout_alignBaseline="@+id/textView_state"
    android:layout_alignBottom="@+id/textView_state"
    android:layout_toRightOf="@+id/button_selectChart"
    android:layout_toEndOf="@+id/button_selectChart" />

</RelativeLayout>
