<?xml version="1.0" encoding="utf-8"?>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".DonateBloodActivity"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:background="#651919">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="650dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/enterDetails"
            android:id="@+id/textView_enterDetails"
            android:textColor="#ffffffff"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/textView_blood"
            android:layout_toEndOf="@+id/textView_blood" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffffff"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Name"
            android:id="@+id/textView_name"
            android:layout_below="@+id/textView_enterDetails"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="28dp" />


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:textColor="#ffffffff"
            android:id="@+id/editText_name"
            android:layout_above="@+id/editText_postalAddress"
            android:layout_toRightOf="@+id/imageButton_post"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffffff"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Address"
            android:id="@+id/textView_address"
            android:layout_alignBottom="@+id/editText_postalAddress"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffffff"
            android:inputType="textPostalAddress"
            android:ems="10"
            android:id="@+id/editText_postalAddress"
            android:layout_below="@+id/textView_name"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignLeft="@+id/editText_name"
            android:layout_alignStart="@+id/editText_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffffff"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ContactNo"
            android:id="@+id/textView_contactNo"
            android:layout_below="@+id/textView_address"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="35dp" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:maxLength="10"
            android:textColor="#ffffffff"
            android:id="@+id/editText_contactNo"
            android:layout_alignBottom="@+id/textView_contactNo"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"

            android:layout_alignLeft="@+id/editText_postalAddress"
            android:layout_alignStart="@+id/editText_postalAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffffff"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/BloodGroup"
            android:id="@+id/textView_blood"
            android:layout_below="@+id/textView_contactNo"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="25dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffffff"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/textViewState"
            android:id="@+id/textView_state"
            android:layout_below="@+id/textView_blood"
            android:layout_alignRight="@+id/textView_name"
            android:layout_alignEnd="@+id/textView_name"
            android:layout_marginTop="32dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffffff"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/MedicalHistory"
            android:id="@+id/textView_medicalHistory"
            android:layout_alignTop="@+id/spinner_medicalHistory"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffffff"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/currentLocation"
            android:id="@+id/textView_location"
            android:layout_alignTop="@+id/spinner_location"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_bloodGroups"
            android:layout_alignTop="@+id/textView_blood"
            android:layout_alignLeft="@+id/imageButton_cancel"
            android:layout_alignStart="@+id/imageButton_cancel" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_state"
            android:layout_alignTop="@+id/textView_state"
            android:layout_alignLeft="@+id/spinner_bloodGroups"
            android:layout_alignStart="@+id/spinner_bloodGroups" />


        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_location"
            android:layout_below="@+id/spinner_medicalHistory"
            android:layout_alignLeft="@+id/imageButton_cancel"
            android:layout_alignStart="@+id/imageButton_cancel"
            android:layout_marginTop="37dp" />



        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton_post"
            android:onClick="postDataToServer"
            android:src="@drawable/post"
            android:layout_below="@+id/spinner_location"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="24dp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton_cancel"
            android:src="@drawable/cancel"
            android:onClick="goBack"
            android:layout_alignTop="@+id/imageButton_post"
            android:layout_alignRight="@+id/editText_contactNo"
            android:layout_alignEnd="@+id/editText_contactNo" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_medicalHistory"
            android:layout_below="@+id/spinner_state"
            android:layout_alignLeft="@+id/spinner_location"
            android:layout_alignStart="@+id/spinner_location"
            android:layout_marginTop="43dp" />
    </RelativeLayout>
</ScrollView>